@@ -106,7 +106,6 @@ setHwndWindow(PceWindow sw, HWND ref)
     w->hwnd       = ref;
     w->hcursor    = 0;
     w->capture    = 0;
-    w->haspalette = 0;
   } else
   { if ( sw->ws_ref )
     { unalloc(sizeof(ws_window), sw->ws_ref);
