@@ -1,5 +1,8 @@
 [VERSION 4.8.18]
 
+* FIXED: XPCE/SWI-Prolog detect now on basis of the *basename* of the
+  file rather then the entire path
+
 * FIXED: Win32: loading .ico file images.  Broken when moved to 32-bit
   platform.
 
